# inventory

./: .hgignore  .hgtags  README.md  TODO.md  pyproject.toml
inventory/: __main__.py  main.py
inventory/gui/: constants.py  main_window.py  prompts.py  utilities.py
inventory/gui/base/: README.md  dialog_category.py  dialog_document.py  dialog_document_browser.py  dialog_location_mapping.py  dialog_part.py  dialog_part_select.py  dialog_part_weight.py  dialog_parts.py  dialog_parts_counter.py  dialog_print_reference.py  dialog_relocate.py  dialog_slot_select.py  dialog_supplier.py  dialog_supplier_mapping.py  main_window.py  page_parts.py  (+19 more)
inventory/libraries/: references.py  scanner.py
inventory/model/: __init__.py  attributes.py  base.py  categories.py  documents.py  mixins.py  parts.py  projects.py  storage.py  suppliers.py
scripts/: gui.py
ui/: _generate.bat  dialog_category.ui  dialog_document.ui  dialog_document_browser.ui  dialog_location_mapping.ui  dialog_part.ui  dialog_part_select.ui  dialog_part_weight.ui  dialog_parts.ui  dialog_parts_counter.ui  dialog_print_reference.ui  dialog_relocate.ui  dialog_slot_select.ui  dialog_supplier.ui  dialog_supplier_mapping.ui  main_window.ui  page_parts.ui  tab_categories.ui  tab_lost.ui  tab_parts.ui  tab_projects.ui  tab_storage.ui  tab_suppliers.ui  widget_areas.ui  widget_attributes.ui  widget_document_list.ui  widget_file_select.ui  widget_location.ui  widget_materials.ui  widget_parts.ui  widget_projects.ui  widget_revisions.ui  widget_slots.ui  widget_suppliers.ui  widget_units.ui  wizard_bom_import.ui
(+43 files in other folders)
