[tool.poetry]
name = "inventory"
version = "0.1.0"
description = "A tool for managing an extensive inventory of tiny electronics components."
authors = ["Jared Julien <jaredjulien@exsystems.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pyside6 = "^6.5.1.1"
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
pyqtdarktheme = "^2.1.0"
peewee = "^3.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
