[tool.poetry]
name = "inventory"
version = "0.1.0"
description = "A tool for managing an extensive inventory of tiny electronics components."
authors = ["Jared Julien <jaredjulien@exsystems.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pyside6 = "^6.5.1.1"
pyqtdarktheme = "^2.1.0"
peewee = "^3.16.2"
pyusb = "^1.2.1"
timeago = "^1.0.16"
qtawesome = "^1.2.3"
click = "^8.1.7"
thefuzz = "^0.20.0"

[tool.poetry.scripts]
inventory = "inventory.main:main"
ui = "scripts.gui:generate"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
